--- a/web/inicio.html
+++ b/web/inicio.html
@@ -59,8 +59,8 @@
                         <nav class="navbar">
                             <ul class="navbar_menu">
                                 <li><a class="nav-link" href="#">Inicio</a></li>
-                                <li><a class="nav-link" href="C:\Users\Isaac\Desktop\miutopia\web\index.html">Productos</a></li>
-                                <li><a class="nav-link" href="C:\Users\Isaac\Desktop\miutopia\web\contacto.html">Contacto</a></li>
+                                <li><a class="nav-link" href="https://isaacdeme.github.io/miutopia/web/index.html">Productos</a></li>
+                                <li><a class="nav-link" href="https://isaacdeme.github.io/miutopia/web/contacto.html">Contacto</a></li>
                             </ul>
                             <!--
                             <ul class="navbar_user">
