--- a/web/contacto.html
+++ b/web/contacto.html
@@ -22,8 +22,8 @@
 				<div class="col-md-12">
                     <a href="https://www.instagram.com/miutopia.9?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw=="><i class="fa-brands fa-instagram"   id="icono-enlaces" href=""></i></a>
                     <a href="https://www.tiktok.com/@miutopia0?is_from_webapp=1&sender_device=pc"><i class="fa-brands fa-tiktok"      id="icono-enlaces" href=""></i></a>
-                    <a href="C:\Users\Isaac\Desktop\miutopia\web\contacto.html"><i class="fa-solid fa-phone"        id="icono-enlaces" href=""></i></a>
-                    <a href="C:\Users\Isaac\Desktop\miutopia\web\contacto.html"><i class="fa-solid fa-envelope"     id="icono-enlaces" href=""></i></a>
+                    <a href="https://isaacdeme.github.io/miutopia/web/contacto.html"><i class="fa-solid fa-phone"        id="icono-enlaces" href="https://isaacdeme.github.io/miutopia/web/contacto.html"></i></a>
+                    <a href="https://isaacdeme.github.io/miutopia/web/contacto.html"><i class="fa-solid fa-envelope"     id="icono-enlaces" href="https://isaacdeme.github.io/miutopia/web/contacto.html"></i></a>
 					<style>
 						a{
 							color: black;
@@ -48,14 +48,14 @@
 			<div class="row">
 				<div class="col-lg-12 text-right">
 					<div class="logo_container">
-						<a href="C:\Users\Isaac\Desktop\miutopia\web\inicio.html">
+						<a href="https://isaacdeme.github.io/miutopia/web/inicio.html">
 							<img src="assets/images/logo.png" class="mi_logo">
 						</a>
 					</div>
 					<nav class="navbar">
 						<ul class="navbar_menu">
-							<li><a class="nav-link" href="C:\Users\Isaac\Desktop\miutopia\web\inicio.html">Inicio</a></li>
-							<li><a class="nav-link" href="C:\Users\Isaac\Desktop\miutopia\web\index.html">Productos</a></li>
+							<li><a class="nav-link" href="https://isaacdeme.github.io/miutopia/web/inicio.html">Inicio</a></li>
+							<li><a class="nav-link" href="https://isaacdeme.github.io/miutopia/web/index.html">Productos</a></li>
 							<li><a class="nav-link" href="#">Contacto</a></li>
 						</ul>
                         <!--
@@ -86,9 +86,9 @@
         <ul class="menu_top_nav">
             
             
-            <li class="menu_item"><a href="C:\Users\Isaac\Desktop\miutopia\web\inicio.html">Inicio</a></li>
-            <li class="menu_item"><a href="#">Productos</a></li>
-            <li class="menu_item"><a href="C:\Users\Isaac\Desktop\miutopia\web\contacto.html">Contacto</a></li>
+            <li class="menu_item"><a href="https://isaacdeme.github.io/miutopia/web/inicio.html">Inicio</a></li>
+            <li class="menu_item"><a href="https://isaacdeme.github.io/miutopia/web/index.html">Productos</a></li>
+            <li class="menu_item"><a href="https://isaacdeme.github.io/miutopia/web/contacto.html">Contacto</a></li>
         </ul>
     </div>
 </div>
@@ -114,8 +114,8 @@
             <div class="col">
               <h3>Contacto</h3>
               <ul>
-                <li> <i class="fa-solid fa-phone"      id="icono-enlaces" href="C:\Users\Isaac\Desktop\miutopia\web\contacto.html"></i> <a href="#">+34 642 57 11 33</a></li>
-                <li><i class="fa-solid fa-envelope"     id="icono-enlaces" href="C:\Users\Isaac\Desktop\miutopia\web\contacto.html"></i> <a href="#"> miutopia.9@gmail.com</a> </li>
+                <li> <i class="fa-solid fa-phone"      id="icono-enlaces" href="https://isaacdeme.github.io/miutopia/web/contacto.html"></i> <a href="https://isaacdeme.github.io/miutopia/web/contacto.html">+34 642 57 11 33</a></li>
+                <li><i class="fa-solid fa-envelope"     id="icono-enlaces" href="https://isaacdeme.github.io/miutopia/web/contacto.html"></i> <a href="https://isaacdeme.github.io/miutopia/web/contacto.html"> miutopia.9@gmail.com</a> </li>
               </ul>
             </div>
             <div class="col">
