--- a/web/inicio.html
+++ b/web/inicio.html
@@ -26,8 +26,8 @@
                     <div class="col-md-12">
                         <a href="https://www.instagram.com/miutopia.9?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw=="><i class="fa-brands fa-instagram"   id="icono-enlaces" href=""></i></a>
                     <a href="https://www.tiktok.com/@miutopia0?is_from_webapp=1&sender_device=pc"><i class="fa-brands fa-tiktok"      id="icono-enlaces" href=""></i></a>
-                    <a href="C:\Users\Isaac\Desktop\miutopia\web\contacto.html"><i class="fa-solid fa-phone"        id="icono-enlaces" href=""></i></a>
-                    <a href="C:\Users\Isaac\Desktop\miutopia\web\contacto.html"><i class="fa-solid fa-envelope"     id="icono-enlaces" href=""></i></a>
+                    <a href="https://isaacdeme.github.io/miutopia/web/contacto.html"><i class="fa-solid fa-phone"        id="icono-enlaces" href="https://isaacdeme.github.io/miutopia/web/inicio.html"></i></a>
+                    <a href="https://isaacdeme.github.io/miutopia/web/contacto.html"><i class="fa-solid fa-envelope"     id="icono-enlaces" href="https://isaacdeme.github.io/miutopia/web/inicio.html"></i></a>
 					<style>
 						a{
 							color: black;
@@ -58,7 +58,7 @@
                         </div>
                         <nav class="navbar">
                             <ul class="navbar_menu">
-                                <li><a class="nav-link" href="#">Inicio</a></li>
+                                <li><a class="nav-link" href="https://isaacdeme.github.io/miutopia/web/inicio.html">Inicio</a></li>
                                 <li><a class="nav-link" href="https://isaacdeme.github.io/miutopia/web/index.html">Productos</a></li>
                                 <li><a class="nav-link" href="https://isaacdeme.github.io/miutopia/web/contacto.html">Contacto</a></li>
                             </ul>
