--- a/web/inicio.html
+++ b/web/inicio.html
@@ -140,8 +140,8 @@
             <div class="col">
               <h3>Contacto</h3>
               <ul>
-                <li> <i class="fa-solid fa-phone"      id="icono-enlaces" href="https://isaacdeme.github.io/miutopia/web/contacto.html"></i> <a href="#">+34 642 57 11 33</a></li>
-                <li><i class="fa-solid fa-envelope"     id="icono-enlaces" href="https://isaacdeme.github.io/miutopia/web/contacto.html"></i> <a href="#"> miutopia.9@gmail.com</a> </li>
+                <li> <i class="fa-solid fa-phone"      id="icono-enlaces" href="https://isaacdeme.github.io/miutopia/web/contacto.html"></i> <a href="https://isaacdeme.github.io/miutopia/web/contacto.html">+34 642 57 11 33</a></li>
+                <li><i class="fa-solid fa-envelope"     id="icono-enlaces" href="https://isaacdeme.github.io/miutopia/web/contacto.html"></i> <a href="https://isaacdeme.github.io/miutopia/web/contacto.html"> miutopia.9@gmail.com</a> </li>
               </ul>
             </div>
             <div class="col">
